--- a/index.html
+++ b/index.html
@@ -43,33 +43,62 @@
 
 
       <!-- Example of a past time block. The "past" class adds a gray background color. -->
-      <div id="hour-9" class="row time-block past">
-        <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
-          <i class="fas fa-save" aria-hidden="true"></i>
-        </button>
+      <div id="9" class="row time-block past">
+        <div class="col-2 col-md-1 hour text-center py-3">9</div>
+        <textarea id="9" class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
       <!-- Example of a present time block. The "present" class adds a red background color. -->
-      <div id="hour-10" class="row time-block present">
-        <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
-          <i class="fas fa-save" aria-hidden="true"></i>
-        </button>
+      <div id="10" class="row time-block present">
+        <div class="col-2 col-md-1 hour text-center py-3">10</div>
+        <textarea id="10" class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
       <!-- Example of a future time block. The "future" class adds a green background color. -->
-      <div id="hour-11" class="row time-block future">
-        <div class="col-2 col-md-1 hour text-center py-3">11AM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
-          <i class="fas fa-save" aria-hidden="true"></i>
-        </button>
+      <div id="11" class="row time-block future">
+        <div class="col-2 col-md-1 hour text-center py-3">11</div>
+        <textarea id="11" class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+    
+      <div id="12" class="row time-block future">
+        <div class="col-2 col-md-1 hour text-center py-3">12</div>
+        <textarea id="12" class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div id="1" class="row time-block future">
+        <div class="col-2 col-md-1 hour text-center py-3">1</div>
+        <textarea id="1" class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div id="2" class="row time-block future">
+        <div class="col-2 col-md-1 hour text-center py-3">2</div>
+        <textarea id="2" class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
     </div>
 
+      <div id="3" class="row time-block future">
+        <div class="col-2 col-md-1 hour text-center py-3">3</div>
+        <textarea id="3" class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div id="4" class="row time-block future">
+        <div class="col-2 col-md-1 hour text-center py-3">4</div>
+        <textarea id="4" class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div id="5" class="row time-block future">
+        <div class="col-2 col-md-1 hour text-center py-3">5</div>
+        <textarea id="5" class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
